--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,8 @@
 form {
-    border: 3px solid #f1f1f1;
-    padding: 1vw;
-    position: relative;
-    text-align: center;
-    min-width: 400px;
+    border: 3px solid #ced4da;
+    padding: 2vw;
+    display: flex;
+    align-items: center;
   }
   form button:hover {
     opacity: 1.8;
