--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,4 @@
-form {
-    border: 3px solid #ced4da;
-    padding: 2vw;
-    display: flex;
-    align-items: center;
-  }
-  form button:hover {
-    opacity: 1.8;
-  }
+.noPad{
+    padding-left: 0;
+    padding-right: 0;
+}
